--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,1 +1,30 @@
+gitpitch: 4.0
 
+# Layout
+layout : center
+
+# Look-and-Feel
+theme : night
+theme-override : app.css
+highlight : white
+code-line-numbers : true
+background-opacity : 75
+footnote : "Twitter : @yasshi_dayooon"
+
+# Behavior
+transition : none
+published : true
+print-fragments : true
+print-notes     : false
+print-footer    : true
+eager-loading : true
+
+# Fro Twitter Card And Other
+title : "データを扱いたい！はじめてのAWS"
+description : ""
+#thumbnail : "PythonAndLibraries.png"
+
+
+# Plugins
+charts : true
+mathjax : TeX-AMS_HTML-full
